remove bower components from root

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@ dist
 .sass-cache
 .idea
 app/bower_components
-next-casino.sublime-project
-next-casino.sublime-workspace
+MispelledKee.sublime-project
+MispelledKee.sublime-workspace
 test-results.xml
