--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "coffeeify": "^0.6.0",
     "gulp-browserify": "~0.5.0",
-    "gulp-livereload": "^1.5.0"
+    "gulp-livereload": "^1.5.0",
+    "coffee-script": "~1.7.1",
+    "gulp-sass": "~0.7.1"
   },
   "devDependencies": {
     "gulp": "~3.6.0",
