--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "json3": "~3.2.6",
     "angular-ui-router": "0.2.10",
     "es5-shim": "~2.1.0",
-    "angular-ui-utils": "~0.1.1"
+    "angular-ui-utils": "~0.1.1",
+    "components-font-awesome": "~4.0.3",
+    "Font-Awesome": "https://github.com/FortAwesome/Font-Awesome.git#~4.0.3"
   },
   "devDependencies": {
     "bootstrap": "~3.1.1"
