--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "es5-shim": "~2.1.0",
     "angular-ui-utils": "~0.1.1",
     "components-font-awesome": "~4.0.3",
-    "Font-Awesome": "https://github.com/FortAwesome/Font-Awesome.git#~4.0.3"
+    "Font-Awesome": "https://github.com/FortAwesome/Font-Awesome.git#~4.0.3",
+    "lodash": "~2.4.1",
+    "underscore": "~1.6.0"
   },
   "devDependencies": {
     "bootstrap": "~3.1.1"
