--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gulp-browserify": "~0.5.0",
     "gulp-livereload": "^1.5.0",
     "coffee-script": "~1.7.1",
-    "gulp-sass": "~0.7.1"
+    "gulp-sass": "~0.7.1",
+    "gulp-notify": "~1.2.5"
   },
   "devDependencies": {
     "gulp": "~3.6.0",
@@ -42,7 +43,8 @@
     "gulp-cssmin": "~0.1.4",
     "gulp-jade": "~0.5.0",
     "gulp-minify-html": "~0.1.3",
-    "gulp-svgmin": "~0.4.5"
+    "gulp-svgmin": "~0.4.5",
+    "gulp-plumber": "~0.6.1"
   },
   "engines": {
     "node": ">=0.10.0"
