--- a/package.json
+++ b/package.json
@@ -11,40 +11,40 @@
     "gulp-notify": "~1.2.5"
   },
   "devDependencies": {
-    "gulp": "~3.6.0",
-    "gulp-load-plugins": "~0.5.0",
-    "gulp-util": "~2.2.9",
+    "gulp": "^3.6.2",
     "gulp-autoprefixer": "~0.0.6",
-    "gulp-csso": "~0.2.6",
-    "gulp-jshint": "~1.4.0",
-    "gulp-imagemin": "~0.1.4",
-    "gulp-clean": "~0.2.4",
-    "gulp-uglify": "~0.2.1",
-    "gulp-cache": "~0.1.1",
-    "gulp-ruby-sass": "~0.3.0",
-    "gulp-size": "~0.1.2",
-    "gulp-connect": "~2.0.0",
-    "gulp-useref": "~0.4.3",
-    "wiredep": "~1.3.0",
-    "gulp-filter": "~0.3.1",
-    "open": "~0.0.4",
-    "gulp-flatten": "~0.0.2",
     "gulp-bower-files": "~0.2.1",
     "gulp-browserify": "~0.5.0",
-    "through": "~2.3.4",
-    "gulp-concat": "~2.2.0",
-    "gulp-rename": "~1.2.0",
-    "gulp-if": "0.0.5",
-    "gulp-watch": "~0.5.4",
+    "gulp-cache": "~0.1.1",
+    "gulp-clean": "~0.2.4",
     "gulp-coffee": "~1.4.1",
-    "gutil": "~1.0.6",
-    "gulp-reload": "0.0.4",
-    "gulp-less": "~1.2.3",
+    "gulp-concat": "~2.2.0",
+    "gulp-connect": "~2.0.0",
     "gulp-cssmin": "~0.1.4",
+    "gulp-csso": "~0.2.6",
+    "gulp-filter": "~0.3.1",
+    "gulp-flatten": "~0.0.2",
+    "gulp-if": "0.0.5",
+    "gulp-imagemin": "~0.1.4",
     "gulp-jade": "~0.5.0",
+    "gulp-jshint": "~1.4.0",
+    "gulp-less": "~1.2.3",
+    "gulp-load-plugins": "~0.5.0",
     "gulp-minify-html": "~0.1.3",
+    "gulp-plumber": "~0.6.1",
+    "gulp-reload": "0.0.4",
+    "gulp-rename": "~1.2.0",
+    "gulp-ruby-sass": "~0.3.0",
+    "gulp-size": "~0.1.2",
     "gulp-svgmin": "~0.4.5",
-    "gulp-plumber": "~0.6.1"
+    "gulp-uglify": "~0.2.1",
+    "gulp-useref": "~0.4.3",
+    "gulp-util": "~2.2.9",
+    "gulp-watch": "~0.5.4",
+    "gutil": "~1.0.6",
+    "open": "~0.0.4",
+    "through": "~2.3.4",
+    "wiredep": "~1.3.0"
   },
   "engines": {
     "node": ">=0.10.0"
