--- a/package.json
+++ b/package.json
@@ -12,23 +12,19 @@
   },
   "devDependencies": {
     "connect-livereload": "^0.4.0",
+    "event-stream": "^3.1.7",
     "express": "^4.7.2",
     "gulp": "^3.6.2",
+    "gulp-angular-templatecache": "^1.2.1",
     "gulp-autoprefixer": "~0.0.6",
-    "gulp-bower-files": "~0.2.1",
     "gulp-browserify": "~0.5.0",
     "gulp-cache": "~0.1.1",
     "gulp-clean": "~0.2.4",
     "gulp-coffee": "~1.4.1",
     "gulp-concat": "~2.2.0",
     "gulp-connect": "~2.0.0",
-    "gulp-cssmin": "~0.1.4",
-    "gulp-csso": "~0.2.6",
     "gulp-embedlr": "^0.5.2",
-    "gulp-filter": "~0.3.1",
-    "gulp-flatten": "~0.0.2",
-    "gulp-if": "0.0.5",
-    "gulp-imagemin": "~0.1.4",
+    "gulp-inject": "^1.0.1",
     "gulp-jade": "~0.5.0",
     "gulp-jshint": "~1.4.0",
     "gulp-less": "~1.2.3",
@@ -40,12 +36,15 @@
     "gulp-rename": "~1.2.0",
     "gulp-ruby-sass": "~0.3.0",
     "gulp-size": "~0.1.2",
+    "gulp-stylus": "^1.3.0",
     "gulp-svgmin": "~0.4.5",
     "gulp-uglify": "~0.2.1",
-    "gulp-useref": "~0.4.3",
+    "gulp-usemin": "^0.3.7",
+    "gulp-useref": "^0.6.0",
     "gulp-util": "~2.2.9",
     "gulp-watch": "~0.5.4",
     "gutil": "~1.0.6",
+    "main-bower-files": "^1.0.2",
     "open": "~0.0.4",
     "through": "~2.3.4",
     "tiny-lr": "0.0.9",
