--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
     "angularjs": "1.2.18",
     "bootstrap-flat": "https://github.com/scottdorman/bootstrap-flat.git",
     "json3": "~3.2.6",
-    "angular-ui-router": "0.2.10",
+    "angular-ui-router": "~0.2.10",
     "es5-shim": "~2.1.0",
     "angular-ui-utils": "~0.1.1",
     "components-font-awesome": "~4.0.3",
