--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "components-font-awesome": "~4.0.3",
     "Font-Awesome": "https://github.com/FortAwesome/Font-Awesome.git#~4.0.3",
     "lodash": "~2.4.1",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "angular-resource": "~1.2.23"
   },
   "devDependencies": {
     "bootstrap": "~3.1.1",
